# src/lib/route-validators/postProduct.js
@@ -10,6 +10,7 @@ const schema = {
     name: joi.string().max(255).required(),
     description: joi.string().required(),
     price: joi.number().required(),
+    color: joi.string().max(20).required(),
   }).required(),
 };
 
